--- a/package.json
+++ b/package.json
@@ -3,10 +3,21 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc && npm run esbuild",
+    "clean": "rm -rf dist",
+    "esbuild": "esbuild --bundle src/publicUtils.ts --outfile=dist/bundle.cjs --platform=node"
   },
   "keywords": [],
   "author": "Teppei Sato <teppeis@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@types/node": "^18.0.4",
+    "esbuild": "^0.14.49",
+    "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "got": "^12.1.0"
+  }
 }
