--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "tsc && npm run esbuild",
     "clean": "rm -rf dist",
-    "esbuild": "esbuild --bundle src/publicUtils.ts --outfile=dist/bundle.cjs --platform=node"
+    "esbuild": "esbuild --bundle src/exportSyncForCJS.ts --outfile=dist/bundleSync.cjs --platform=node"
   },
   "keywords": [],
   "author": "Teppei Sato <teppeis@gmail.com>",
