--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "@teppeis/dual-package-cjs-proxy-sample",
   "version": "0.0.0",
   "description": "Sample project for dual package with CJS proxy",
+  "publishConfig": {
+    "access": "public"
+  },
   "type": "module",
   "main": "./index.cjs",
   "types": "./dist/index.d.ts",
